--- a/requirements.txt
+++ b/requirements.txt
@@ -1,155 +1,9 @@
-absl-py==0.13.0
-altgraph==0.17.2
-anaconda==0.0.1.1
-appdirs==1.4.4
-astunparse==1.6.3
-atomicwrites==1.4.0
-attrs==21.2.0
-auto-py-to-exe==2.10.0
-backports.entry-points-selectable==1.1.0
-bottle==0.12.19
-bottle-websocket==0.2.9
-Brotli==1.0.9
-buildozer==1.2.0
-cachetools==4.2.2
-certifi==2021.5.30
-cffi==1.14.6
-charset-normalizer==2.0.4
-clang==5.0
-click==8.0.1
-cmake==3.21.2
-colorama==0.4.4
-cycler==0.10.0
-dash==2.0.0
-dash-core-components==2.0.0
-dash-html-components==2.0.0
-dash-table==5.0.0
-distlib==0.3.2
-dlib @ file:///C:/Users/%D0%90%D0%BB%D0%B5%D0%BA%D1%81%D0%B0%D0%BD%D0%B4%D1%80%20%D0%9A%D0%BE%D1%80%D0%BE%D1%82%D0%BA%D0%B8%D1%85/AppData/Local/Programs/Python/Python39/Scripts/dlib-19.22.1-cp39-cp39-win_amd64.whl
-docutils==0.17.1
-dominate==2.6.0
-Eel==0.12.4
-face-recognition==1.3.0
-face-recognition-models==0.3.0
-fer==21.0.3
-filelock==3.0.12
-Flask==2.0.2
+flask==1.1.2
 Flask-Bootstrap==3.3.7.1
-Flask-Compress==1.10.1
-flatbuffers==1.12
-future==0.18.2
-gast==0.4.0
-gevent==21.8.0
-gevent-websocket==0.10.1
-google-api-core==2.0.1
-google-auth==1.35.0
-google-auth-oauthlib==0.4.6
-google-cloud-speech==2.8.0
-google-pasta==0.2.0
-googleapis-common-protos==1.53.0
-greenlet==1.1.1
-grpcio==1.34.1
-gTTS==2.2.3
-gunicorn==20.0.4
-h5py==3.1.0
-idna==3.2
-imageio==2.9.0
-importlib-metadata==4.8.1
-imutils==0.5.4
-iniconfig==1.1.1
-itsdangerous==2.0.1
-Jinja2==3.0.1
-joblib==1.0.1
-Keras==2.4.3
-keras-nightly==2.5.0.dev2021032900
-Keras-Preprocessing==1.1.2
-Kivy==2.0.0
-kivy-deps.angle==0.3.0
-kivy-deps.glew==0.3.0
-kivy-deps.sdl2==0.3.1
-Kivy-Garden==0.1.4
-kiwisolver==1.3.2
-libcst==0.3.20
-Markdown==3.3.4
-MarkupSafe==2.0.1
-matplotlib==3.4.3
-mtcnn==0.1.1
-mypy-extensions==0.4.3
-mysql==0.0.3
-mysqlclient==2.0.3
-networkx==2.6.2
-NuMPI==0.1.6
-numpy==1.19.5
-oauthlib==3.1.1
-opencv-contrib-python==4.5.3.56
-opencv-python==4.5.3.56
-opt-einsum==3.3.0
-packaging==21.0
-pandas==1.3.2
-pefile==2021.9.3
-pep517==0.6.0
-pexpect==4.8.0
-Pillow==8.3.2
-platformdirs==2.3.0
-playsound==1.3.0
-plotly==5.4.0
-pluggy==1.0.0
-proto-plus==1.19.0
-protobuf==3.17.3
-ptyprocess==0.7.0
-py==1.10.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-PyAudio @ file:///C:/Users/%D0%90%D0%BB%D0%B5%D0%BA%D1%81%D0%B0%D0%BD%D0%B4%D1%80%20%D0%9A%D0%BE%D1%80%D0%BE%D1%82%D0%BA%D0%B8%D1%85/AppData/Local/Programs/Python/Python39/Scripts/PyAudio-0.2.11-cp39-cp39-win_amd64.whl
-pybind11==2.2.2
-pycparser==2.20
-Pygments==2.10.0
-pyinstaller==4.5.1
-pyinstaller-hooks-contrib==2021.3
-pyparsing==2.4.7
-pyperclip==1.8.2
-pypiwin32==223
-pytest==6.2.5
-python-dateutil==2.8.2
-python-for-android==2021.9.5
-pytoml==0.1.21
-pytz==2021.1
-PyWavelets==1.1.1
-pywin32==301
-pywin32-ctypes==0.2.0
-PyYAML==5.4.1
-regex==2021.8.28
-requests==2.26.0
-requests-oauthlib==1.3.0
-rsa==4.7.2
-scikit-image==0.18.3
-scikit-learn==0.24.2
-scipy==1.7.1
-seaborn==0.11.2
-sh==1.14.2
-six==1.15.0
-SpeechRecognition==3.8.1
-tenacity==8.0.1
-tensorboard==2.6.0
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.0
-tensorflow==2.5.1
-tensorflow-estimator==2.5.0
-termcolor==1.1.0
-threadpoolctl==2.2.0
-tifffile==2021.8.30
-tk==0.1.0
-toml==0.10.2
-tqdm==4.62.2
-typing-extensions==3.7.4.3
-typing-inspect==0.7.1
-urllib3==1.26.6
-virtualenv==20.7.2
-visitor==0.1.3
-vosk==0.3.31
-Werkzeug==2.0.1
-whichcraft==0.6.1
-wrapt==1.12.1
-zipp==3.5.0
-zope.event==4.5.0
-zope.interface==5.4.0
+Tensorflow 2.2.0
+tensorboard-plugin-wit==1.6.0.post3
+tensorboard==2.2.1
+tensorflow-estimator==2.2.0
+keras-preprocessing==1.1.2
+opencv-python==4.2.0.34
+gunicorn
