--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,21 @@
-flask==1.1.2
-Flask-Bootstrap==3.3.7.1
-keras-preprocessing==1.1.2
-matplotlib==3.2.1
-numpy==1.18.4
-opencv-python==4.2.0.34
-tensorboard-plugin-wit==1.6.0.post3
-tensorboard==2.2.1
-tensorflow-estimator==2.2.0
-tensorflow==2.2.0
-gunicorn
+absl-py==0.2.2
+astor==0.8.0
+bleach==3.1.4
+gast==0.2.0
+grpcio==1.13.0
+h5py==2.8.0
+html5lib==0.9999999
+Keras==2.2.0
+Keras-Applications==1.0.6
+Keras-Preprocessing==1.0.5
+Markdown==2.6.11
+numpy==1.14.5
+opencv-python==3.4.2.17
+protobuf==3.6.1
+PyYAML==4.2b1
+scipy==1.1.0
+six==1.11.0
+tensorboard==1.13.0
+tensorflow==1.15.2
+termcolor==1.1.0
+Werkzeug==0.15.3
