--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,10 @@ protobuf==3.6.1
 PyYAML==4.2b1
 scipy==1.1.0
 six==1.11.0
-tensorboard==1.13.0
-tensorflow==1.15.2
+tensorboard==2.5.0
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.0
+tensorflow-cpu
+tensorflow-estimator==2.5.0rc0
 termcolor==1.1.0
 Werkzeug==0.15.3
