--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,14 @@
-absl-py==0.2.2
-astor==0.8.0
-bleach==3.1.4
-gast==0.2.0
-grpcio==1.13.0
+absl-py==1.0.0
+astor==0.8.1
+bleach==4.1.0
+gast==0.5.3
+grpcio==1.43.0
 gunicorn==20.0.4
-h5py==2.8.0
-html5lib==0.9999999
-Keras==2.2.0
-Keras-Applications==1.0.6
-Keras-Preprocessing==1.0.5
+h5py==3.6.0
+html5lib==1.1
+Keras==2.7.0
+Keras-Applications==1.0.8
+Keras-Preprocessing==1.1.2
 Markdown==2.6.11
 numpy==1.14.5
 opencv-python==4.5.4.60
