--- a/requirements.txt
+++ b/requirements.txt
@@ -9,13 +9,13 @@ html5lib==1.1
 Keras==2.7.0
 Keras-Applications==1.0.8
 Keras-Preprocessing==1.1.2
-Markdown==2.6.11
-numpy==1.14.5
+Markdown==3.3.6
+numpy==1.21.5
 opencv-python==4.5.4.60
-protobuf==3.6.1
-PyYAML==4.2b1
-scipy==1.1.0
-six==1.11.0
+protobuf==3.19.1
+PyYAML==6.0
+scipy==1.7.3
+six==1.16.0
 tensorboard==2.5.0
 tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.0
