--- a/requirements.txt
+++ b/requirements.txt
@@ -16,10 +16,10 @@ protobuf==3.19.1
 PyYAML==6.0
 scipy==1.7.3
 six==1.16.0
-tensorboard==2.5.0
+tensorboard==2.7.0
 tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.0
 tensorflow-cpu
-tensorflow-estimator==2.5.0rc0
+tensorflow-estimator==2.7.0
 termcolor==1.1.0
-Werkzeug==0.15.3
+Werkzeug==2.0.2
