--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,7 @@ six==1.16.0
 tensorboard==2.7.0
 tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.0
-tensorflow-cpu
+tensorflow-cpu==2.7.0
 tensorflow-estimator==2.7.0
 termcolor==1.1.0
 Werkzeug==2.0.2
