--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ protobuf==3.19.1
 PyYAML==6.0
 scipy==1.7.3
 six==1.16.0
+tensorflow==2.7.0
 tensorboard==2.7.0
 tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.0
