--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ flask==2.0.2
 Flask-Bootstrap==3.3.7.1
 h5py==3.6.0
 html5lib==1.1
+Jinja2==2.11.3
 Keras==2.7.0
 Keras-Applications==1.0.8
 Keras-Preprocessing==1.1.2
