--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ Keras-Preprocessing==1.1.2
 Markdown==3.3.6
 numpy==1.21.5
 opencv-python==4.5.4.60
+opencv-contrib-python
 protobuf==3.19.1
 PyYAML==6.0
 scipy==1.7.3
