--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,27 @@
-absl-py==1.0.0
-astor==0.8.1
-bleach==4.1.0
-gast==0.2.1
-grpcio==1.43.0
-gunicorn==20.0.4
-flask==2.0.2
-Flask-Bootstrap==3.3.7.1
-h5py==3.6.0
-html5lib==1.1
-Jinja2==2.11.3
-Keras==2.7.0
-Keras-Applications==1.0.8
-Keras-Preprocessing==1.1.2
-Markdown==3.3.6
-numpy==1.21.5
-opencv-python==4.5.4.60
+absl-py
+astor
+bleach
+gast
+grpcio
+gunicorn
+flask
+Flask-Bootstrap
+h5py
+html5lib
+Jinja2
+Keras
+Keras-Applications
+Keras-Preprocessing
+Markdown
+numpy
+opencv-python
 opencv-contrib-python
-protobuf==3.19.1
-PyYAML==6.0
-scipy==1.7.3
-six==1.16.0
-tensorflow==2.7.0
-tensorboard==2.7.0
-tensorflow-estimator==2.7.0
-termcolor==1.1.0
-werkzeug==2.0.2
+protobuf
+PyYAML
+scipy
+six
+tensorflow
+tensorboard
+tensorflow-estimator
+termcolor
+werkzeug
